// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> Disabled 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    disabled={true}
    id="textarea_mockId"
    value="I was here"
  />
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Icon 1`] = `
<div
  className="input-field col"
>
  <Component
    className="prefix"
  />
  <textarea
    className="materialize-textarea"
    id="textarea_mockId"
  />
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Label 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    id="textarea_mockId"
  />
  <label
    className=""
    htmlFor="textarea_mockId"
  >
    Write something here...
  </label>
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Placeholder 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    id="textarea_mockId"
    placeholder="I was here"
  />
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Textarea 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    id="textarea_mockId"
  />
  <span
    className="helper-text"
  />
</div>
`;
